--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
   <h1>Zeppelin Data Wiki</h1>
   <div class="actions">
     <button id="get-data">Забрать данные</button>
+    <button id="load-mock-data">Загрузить из Mock данных</button>
     <button id="describe-data">Описать</button>
   </div>
 
