--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,9 @@
 <body>
   <h1>Zeppelin Data Wiki</h1>
   <div class="actions">
+    <input id="depth-input" type="number" min="1" max="100" value="4" class="depth-input" />
     <button id="get-data">Забрать данные</button>
+    <button id="load-mock-data">Загрузить из Mock данных</button>
     <button id="describe-data">Описать</button>
   </div>
 
